--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-# python==3.10.12
 bs4==4.12.2
 selenium==4.11.0
-pandas==1.5.3
+pandas>=1.5.3
 nfl-data-py==0.3.0
 scikit-learn==1.2.2
 plotly==5.9
