--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+*.lock
+
+
 .vscode/
 data/
 *.png
@@ -5,6 +8,7 @@ data/
 .DS_Store
 bin/
 *.zip
+*.json
 # ---- DEFAULT ----
 
 # Byte-compiled / optimized / DLL files
