--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,13 @@ readme = "README.md"
 packages = [{ include = "src" }]
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">=3.11,<3.13"
+numpy = "1.26"
+nfl-data-py = "^0.3.1"
 bs4 = "^0.0.2"
 selenium = "^4.22.0"
-pandas = "^2.2.2"
 scikit-learn = "^1.5.1"
 plotly = "^5.22.0"
-nfl-data-py = "^0.3.1"
 jupyter = "^1.0.0"
 jupyter-black = "^0.3.4"
 requests = "^2.32.3"
