win probability and spreads

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ matplotlib = "^3.9.0"
 tqdm = "^4.66.5"
 adjusttext = "^1.2.0"
 statsmodels = "^0.14.2"
+xgboost = "^2.1.1"
+joblib = "^1.4.2"
 
 
 [build-system]
