--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,11 @@ statsmodels = "^0.14.2"
 xgboost = "^2.1.1"
 joblib = "^1.4.2"
 lxml = "^5.3.0"
+streamlit = "^1.47.1"
 
+
+[tool.poetry.scripts]
+app = "app.main:run_app"
 
 [build-system]
 requires = ["poetry-core"]
