--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "nfl-betting"
+name = "g-nfl"
 version = "0.1.0"
 description = "The cleveland browns can stay irrational longer than i can stay solvent"
 authors = ["Griffin Reichert <griffin.reichert@gmail.com>"]
@@ -28,6 +28,7 @@ xgboost = "^2.1.1"
 joblib = "^1.4.2"
 lxml = "^5.3.0"
 streamlit = "^1.47.1"
+tabulate = "^0.9.0"
 
 
 [tool.poetry.scripts]
