--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,9 @@ joblib = "^1.4.2"
 lxml = "^5.3.0"
 streamlit = "^1.47.1"
 tabulate = "^0.9.0"
+supabase = "^2.0.0"
+psycopg = "^3.2.9"
+dotenv = "^0.9.9"
 
 
 [tool.poetry.scripts]
