--- a/requirements.txt
+++ b/requirements.txt
@@ -2156,7 +2156,7 @@ urllib3[socks]==2.5.0 ; python_version >= "3.11" and python_version < "3.13" \
 virtualenv==20.34.0 ; python_version >= "3.11" and python_version < "3.13" \
     --hash=sha256:341f5afa7eee943e4984a9207c025feedd768baff6753cd660c857ceb3e36026 \
     --hash=sha256:44815b2c9dee7ed86e387b842a84f20b93f7f417f95886ca1996a72a4138eb1a
-watchdog==6.0.0 ; python_version >= "3.11" and python_version < "3.13" and platform_system != "Darwin" \
+watchdog==6.0.0 ; python_version >= "3.11" and python_version < "3.13" \
     --hash=sha256:07df1fdd701c5d4c8e55ef6cf55b8f0120fe1aef7ef39a1c6fc6bc2e606d517a \
     --hash=sha256:20ffe5b202af80ab4266dcd3e91aae72bf2da48c0d33bdb15c66658e685e94e2 \
     --hash=sha256:212ac9b8bf1161dc91bd09c048048a95ca3a4c4f5e5d4a7d1b1a7d5752a7f96f \
