--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,8 @@ supabase = "^2.0.0"
 psycopg = "^3.2.9"
 dotenv = "^0.9.9"
 watchdog = "^6.0.0"
+nflreadpy = "^0.1.4"
+poetry-plugin-export = "^1.9.0"
 
 
 [tool.poetry.scripts]
