--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ streamlit = "^1.47.1"
 tabulate = "^0.9.0"
 supabase = "^2.0.0"
 psycopg = "^3.2.9"
-dotenv = "^0.9.9"
+python-dotenv = "^1.0.0"
 watchdog = "^6.0.0"
 nflreadpy = "^0.1.4"
 poetry-plugin-export = "^1.9.0"
